--- a/signup.html
+++ b/signup.html
@@ -18,9 +18,9 @@
         <p class="intro">SignUp to My Newsletter!</p>
         <form action="/" method="post">
             
-            <input type="text" placeholder=" First name" name="firstname" class="items"><br>
-            <input type="text" placeholder=" Last Name" name="lastname" class="items"> <br>
-            <input type="email" placeholder=" Email" name="Email" class="items"><br>
+            <input type="text" placeholder=" First name" name="firstname" class="items" required><br>
+            <input type="text" placeholder=" Last Name" name="lastname" class="items" required> <br>
+            <input type="email" placeholder=" Email" name="Email" class="items" required><br>
             <button type="submit" class="btn btn-light">Sign Up</button>
            
         </form>
